--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -420,7 +420,7 @@ a {
 // ========== hand made section ==========
 .handMade {
 	background-color: #f9f9f9;
-	background-image: url("../img/handmade/bg_mobile.jpg");
+	background-image: url("../img/handmade/bgMobile.jpg");
 	background-repeat: no-repeat;
 	background-position: center top;
 	max-width: 575px;
@@ -488,7 +488,7 @@ a {
 
 .handMade {
 	max-width: 100%;
-	background-image: url("../img/handmade/bg_tablet_handMade.jpg");
+	background-image: url("../img/handmade/bgDesktop.jpg");
 	padding-top: 155px;
 	margin: 0;
 	position: relative;
